<resources>
    <string name="app_name">Carnet</string>

    <!--MenuMain-->
    <string name="menu_main_item_car">CAR</string>
    <string name="menu_main_item_map">MAP</string>
    <string name="menu_main_item_session">SESSION</string>
    <string name="menu_main_item_settings">SETTINGS</string>

    <!--MenuCar-->
    <string name="menu_car_item_connection_status">Connection</string>

    <!--DiagnosticsFragment-->
    <string name="last_connection">Last active connection on %s</string>
    <string name="warning_check">Check</string>
    <string name="connection_status_active">Active</string>
    <string name="connection_status_inactive">Inactive</string>

    <!--SettingsFragment-->
    <string name="offline_map_settings_title">Offline map</string>
    <string name="offline_map_settings_desc">Enables to observe map when you\'re offline</string>
    <string name="map_settings_title">Map settings</string>
    <string name="map_settings_desc">Configure your map as you prefer</string>
    <string name="connection_settings_title">Connection</string>
    <string name="connection_settings_desc">Configure connection to OBD II device</string>
    <string name="notifications_sound_settings_title">Notifications sound</string>
    <string name="notifications_sound_settings_desc">Enables sound when notifications come</string>
    <string name="notifications_settings_title">Notifications</string>
    <string name="notifications_settings_desc">Enables notifications</string>
    <string name="tab_history">History</string>
    <string name="tab_notifications">Notifications</string>

    <string name="skip">Skip</string>

    <!--WarningsHandler-->
    <string name="warn_low_fuel">Fuel is low - %s left</string>
    <string name="warn_heat_engine">Engine is heat - %s</string>
    <string name="warn_low_voltage">Voltage is low - %s</string>
    <string name="warn_speed_limit">Speed is too high - %s</string>
    <string name="less_than_minute">Less then mintute ago</string>

    <!--CreateSessionFragment-->
    <string name="create_session_hint">There is no active session yet\nCreate new session and score!</string>

    <!--MapFragment-->
    <string name="btn_create_session">Create session</string>
    <string name="routing_destination_hint">Where are we going now?</string>
    <string name="session_start">Start session</string>

    <!--RegionsFragment-->
    <string name="regions_title">Download region</string>

    <!--MenuRegions-->
    <string name="menu_regions_search">Search</string>

    <!--SessionsFragment-->
    <string name="session_history_location">%s - %s</string>
    <string name="notif_dangerous_maneuver">Dangerous maneuver</string>
    <string name="notif_traffic_congestion">Traffic congestion</string>
    <string name="my_location">My location</string>
    <string name="create_session_title">Create new session</string>

    <!--RegionsFragment-->
    <string name="region_manager_title">Downloading region</string>
    <string name="region_manager_text">Progress</string>

    <!--ChartsFragment-->
    <string name="charts_title">Diagnostics</string>

    <!--IntroFragment-->
    <string name="intro_first_title">Welcome to the carnet app</string>
    <string name="intro_first_text">This app makes your car to be a service\n Please allow all required permissions for this app to let it work properly</string>

    <string name="intro_second_title">You need OBD-II device</string>
    <string name="intro_second_text">Please make sure you connected to your OBD-II adapter, you can do it any time after</string>

    <string name="intro_third_title">You are ready</string>
    <string name="intro_third_text">Now you can use this app as a monitoring tool and observe others on the map.</string>
    <string name="configure_connection">Configure connection</string>

    <!--ConnectionSettingsFragment-->
    <string name="device_identity_hint">Device identity</string>
    <string name="connect">Connect</string>
    <string name="connection_tutorial">Please check your device identity code on the side of adapter device</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>

    <!--NotificationBottomSheet-->
    <string name="notifying_accept_btn">Send notification</string>
    <string name="notifying_comment">Add your comment (optional)</string>
    <string name="notification_ambulance">Ambulance</string>
    <string name="notification_collapse">Collapse</string>
    <string name="notification_support">Support</string>
    <string name="notification_message">Message</string>
    <string name="telematics_text">Aggregating data</string>
    <string name="telematics_title">Telematics</string>
    <string name="diagnostics_stub">-</string>
    <string name="create_session_error">Error occured, pelase retry</string>

</resources>
