<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@id/carNavigation"
        android:icon="@drawable/ic_vehicle"
        android:title="@string/menu_main_item_car"
        app:showAsAction="ifRoom" />

    <item
        android:id="@id/mapFragment"
        android:icon="@drawable/ic_map"
        android:title="@string/menu_main_item_map"
        app:showAsAction="ifRoom" />

    <item
        android:id="@id/sessionsFragment"
        android:icon="@drawable/ic_sessions"
        android:title="@string/menu_main_item_session"
        app:showAsAction="ifRoom" />

    <item
        android:id="@id/settingsFragment"
        android:icon="@drawable/ic_settings"
        android:title="@string/menu_main_item_settings"
        app:showAsAction="ifRoom" />
</menu>