<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/createSessionLayout"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:background="@color/colorPrimary"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/sessionIcon"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:src="@drawable/ic_routing"
            android:tint="@color/colorText"
            app:layout_constraintBottom_toTopOf="@id/sessionText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/sessionText"
            style="@style/AppTheme.Text.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/create_session_hint"
            app:layout_constraintBottom_toTopOf="@id/btnCreateSession"
            app:layout_constraintEnd_toEndOf="@id/sessionIcon"
            app:layout_constraintStart_toStartOf="@id/sessionIcon"
            app:layout_constraintTop_toBottomOf="@id/sessionIcon" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCreateSession"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_create_session"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/sessionIcon"
            app:layout_constraintStart_toStartOf="@+id/sessionIcon"
            app:layout_constraintTop_toBottomOf="@id/sessionText" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/activeSessionLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/mapView"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            app:layout_constraintTop_toTopOf="parent" />

        <include
            android:id="@+id/values"
            layout="@layout/include_session_values"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/mapView" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/tabsContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:background="@color/colorPrimary"
        app:layout_constraintTop_toBottomOf="@id/createSessionLayout">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:backgroundTint="@color/colorPrimary"
            app:layout_constraintTop_toBottomOf="@id/values"
            app:tabIndicatorHeight="3dp"
            app:tabTextColor="@color/color_tab">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabHistory"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/tab_history" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabNotifications"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/tab_notifications" />

        </com.google.android.material.tabs.TabLayout>

    </FrameLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/tabViewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tabsContainer" />

</androidx.constraintlayout.widget.ConstraintLayout>